<resources>
    <string name="app_name">AppSemana13</string>
    <string name="chats">Chats</string>
    <string name="settings">Ajustes</string>
    <string name="profile">Perfil</string>
    <string name="privacy">Privacidad</string>
    <string name="notifications">Notificaciones</string>
    <string name="appearance">Apariencia</string>
    <string name="chat">Chat</string>
    <string name="storage">Almacenamiento</string>
    <string name="desc_new_chat">Nuevo chat</string>
    <string name="desc_search">Buscar</string>
    <string name="desc_back">Regresar</string>
    <string name="desc_send">Enviar mensaje</string>
    <string name="desc_options">Opciones</string>
    <string name="desc_open_profile">Abrir detalle</string>
</resources>
